--- a/about.html
+++ b/about.html
@@ -19,9 +19,8 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto"> Bem vindos ao meu portifólio, aqui vou falar um pouco sobre a
-                minha pessoa
-                e também dos meus objetivos, espero que gostem.
+            <p class="apresentacao__conteudo__texto"> Bem vindos ao meu portifólio, sou estudante de 
+                Análise e desenvolvimento de sistemas com foco em Front-end 
             </p>
             <p class="apresentacao__conteudo__texto">
                 Olá meu nome é Matheus, tenho 27 anos, sou uma pessoa extrovertida, gosto de trabalhar em grupo, gosto
