--- a/about.html
+++ b/about.html
@@ -23,20 +23,9 @@
                 Análise e desenvolvimento de sistemas com foco em Front-end 
             </p>
             <p class="apresentacao__conteudo__texto">
-                Olá meu nome é Matheus, tenho 27 anos, sou uma pessoa extrovertida, gosto de trabalhar em grupo, gosto
-                também de sempre ajudar com alguma ideia ou solução para algum problema, seja no trabalho ou na vida
-                pessoal, sou bastante perfeccionista, gosto de fazer minhas coisas sempre bem feitas é algo meu. No
-                momento estou em transição de carreira trabalhei por quatro anos na área de audiovisual como freelancer
-                e em seguida trabalhei com logística à mais ou menos dois anos na área. Em audiovisual minhas funções
-                era montagem de equipamentos e cenários fazendo testes antes das gravações, edição dos vídeos ao logo do
-                tempo migrei para CLT na área da logística onde meu foco era trabalhar para poder pagar minha faculdade
-                na área da tecnologia que é a área que eu quero migrar atualmente, estudando me encontrei no que eu
-                quero para vida e sempre que estou estudando me sinto motivado esse portifólio mesmo me fez sentir ainda
-                mais motivação e algo muito gratificante quando desenvolvemos algo e olhamos logo após de pronto e penso
-                eu que fiz isso eu já penso em um futuro próximo que posso avançar cada vez mais e ajudar empresas nos
-                seus projetos tenho experiencia com HTML e JS e estou dando início a um projeto que publicarei aqui no
-                portifólio futuramente, mas até o momento o que tenho a dizer e isso e espero esta exercendo essa
-                profissão que tanto almejo e adquirindo cada vez mais conhecimento.
+          Estou migrando de carreira e estudando com 
+         conhecimentos em linguagens HTML e JS em desenvolvimento web. Busco oportunidades 
+         para aplicar meu conhecimento e desenvolver minhas habilidades e adquirir conhecimentos.
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/Foto1.png" alt="Foto Matheus">
