--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
                 Análise e desenvolvimento de sistemas com foco em Front-end 
             </p>
             <p class="apresentacao__conteudo__texto">
-          Estou migrando de carreira e estudando com 
-         conhecimentos em linguagens HTML e JS em desenvolvimento web. Busco oportunidades 
-         para aplicar meu conhecimento e desenvolver minhas habilidades e adquirir conhecimentos.
+          Estou migrando de carreira, tenho 
+         conhecimento em linguagenm HTML e JS. Busco oportunidades 
+         para aplicar meu conhecimento e desenvolver minhas habilidades como desenvolvedor web.
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/Foto1.png" alt="Foto Matheus">
