--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             </p>
             <p class="apresentacao__conteudo__texto">
           Estou migrando de carreira, tenho 
-         conhecimento em linguagenm HTML e JS. Busco oportunidades 
+         conhecimento em linguagem HTML e JS. Busco oportunidades 
          para aplicar meu conhecimento e desenvolver minhas habilidades como desenvolvedor web.
             </p>
         </section>
