--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
             <p class="apresentacao__conteudo__texto"> Bem vindos ao meu portifólio, sou estudante de 
                 Análise e desenvolvimento de sistemas com foco em Front-end 
             </p>
-            <p class="apresentacao__conteudo__texto">
-          Estou migrando de carreira, tenho 
-         conhecimento em linguagem HTML e JS. Busco oportunidades 
-         para aplicar meu conhecimento e desenvolver minhas habilidades como desenvolvedor web.
+            <p class="apresentacao__conteudo__texto">Sou comunicativo e adoro aprender coisas novas.
+                Organização e pontualidade são algumas das minhas principais características. Estou migrando de carreira e tenho 
+         conhecimento em linguagem HTML e JS. 
+                Busco oportunidade para aplicar meu conhecimento e desenvolver minhas habilidades como desenvolvedor web. 
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/Foto1.png" alt="Foto Matheus">
