--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
             <p class="apresentacao__conteudo__texto"> Bem vindos ao meu portifólio, sou estudante de 
-                Análise e desenvolvimento de sistemas com foco em Front-end 
+                Análise e desenvolvimento de sistemas com foco em Front-end!
             </p>
             <p class="apresentacao__conteudo__texto">Sou comunicativo e adoro aprender coisas novas.
                 Organização e pontualidade são algumas das minhas principais características. Estou migrando de carreira e tenho 
