--- a/about.html
+++ b/about.html
@@ -25,7 +25,8 @@
             <p class="apresentacao__conteudo__texto">Sou comunicativo e adoro aprender coisas novas.
                 Organização e pontualidade são algumas das minhas principais características. Estou migrando de carreira e tenho 
          conhecimento em linguagem HTML e JS. 
-                Busco oportunidade para aplicar meu conhecimento e desenvolver minhas habilidades como desenvolvedor web. 
+                Habilidade em resolução de problemas e aprendizagem rápida. Busco oportunidades para 
+                aplicar meu conhecimento em uma empresa de tecnologia em crescimento.
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/Foto1.png" alt="Foto Matheus">
