--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     github</a>
                 <a class="apresentacao__links__links"
                     href="https://www.linkedin.com/in/matheus-clemente-dias-8b1171250/">
-                    <img src="./assets/linkedin.png">
+                    <img src="./assets/linkedin.png"target="_blank">
                     Linkedin</a>
             </div>
         </section>
