--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__sub"> Acesse minhas redes:</h2>
                 <a class="apresentacao__links__links" href="https://github.com/Matheus77md">
-                    <img src="./assets/githubLogo.png">
+                    <img src="./assets/githubLogo.png"target="_blank">
                     github</a>
                 <a class="apresentacao__links__links"
                     href="https://www.linkedin.com/in/matheus-clemente-dias-8b1171250/">
