--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="./assets/githubLogo.png">
                     github</a>
                 <a class="apresentacao__links__links"
-                    href="https://www.linkedin.com/in/matheus-clemente-dias-8b1171250/">
+                    href="https://www.linkedin.com/in/matheus-clemente-dias-8b1171250/"target="_blank">
                     <img src="./assets/linkedin.png">
                     Linkedin</a>
             </div>
