--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__sub"> Acesse minhas redes:</h2>
-                <a class="apresentacao__links__links" href="https://github.com/Matheus77md">
+                <a class="apresentacao__links__links" href="https://github.com/Matheus77md"target="_blank">
                     <img src="./assets/githubLogo.png">
                     github</a>
                 <a class="apresentacao__links__links"
