--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Matheus Clemente, desenvolvedor Front-end com
                 especialidade
                 em
-            JS, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos
+            JavaScript, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos
                 conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__sub"> Acesse minhas redes:</h2>
