--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Matheus Clemente, desenvolvedor Front-end com
                 especialidade
-                em
+                em React,
             JavaScript, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos
                 conversar?</p>
             <div class="apresentacao__links">
