--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             </p>
             <p class="apresentacao__conteudo__texto">Sou comunicativo e adoro aprender coisas novas.
                 Organização e pontualidade são algumas das minhas principais características. Estou migrando de carreira e tenho 
-         conhecimento em linguagem JavaScript, React, Html e Css. 
+         conhecimento em linguagem JavaScript, Html e Css. 
                 Habilidade em resolução de problemas e aprendizagem rápida. Busco oportunidades para 
                 aplicar meu conhecimento em uma empresa de tecnologia em crescimento.
             </p>
