--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
             <p class="apresentacao__conteudo__texto"> Bem vindos ao meu portifólio, sou estudante de 
                 Análise e desenvolvimento de sistemas com foco em Front-end!
             </p>
-            <p class="apresentacao__conteudo__texto">Sou comunicativo e adoro aprender coisas novas.
+            <p class="apresentacao__conteudo__texto">Sou comunicativo e adoro aprender novas tecnologias.
                 Organização e pontualidade são algumas das minhas principais características. Estou migrando de carreira e tenho 
-         conhecimento em linguagem JavaScript, Html e Css. 
+         conhecimento em linguagem javaScript, html, css e python. 
                 Habilidade em resolução de problemas e aprendizagem rápida. Busco oportunidades para 
-                aplicar meu conhecimento em uma empresa de tecnologia em crescimento.
+                aplicar meu conhecimento em uma empresa de tecnologia.
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/Foto1.png" alt="Foto Matheus">
