--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
             <p class="apresentacao__conteudo__texto"> Bem vindos ao meu portifólio, sou estudante de 
                 Análise e desenvolvimento de sistemas com foco em Front-end!
             </p>
-            <p class="apresentacao__conteudo__texto">Sou comunicativo e adoro aprender coisas novas.
+            <p class="apresentacao__conteudo__texto">Sou comunicativo e adoro aprender novas tecnologias.
                 Organização e pontualidade são algumas das minhas principais características. Estou migrando de carreira e tenho 
-         conhecimento em linguagem JavaScript, Html e Css. 
+         conhecimento em linguagem JavaScript, HTML, CSS e Python
                 Habilidade em resolução de problemas e aprendizagem rápida. Busco oportunidades para 
                 aplicar meu conhecimento em uma empresa de tecnologia em crescimento.
             </p>
